testsuite/tests/partial-sigs/should_fail/WildcardInInstanceSig.stderr

WildcardInInstanceSig.hs:5:13: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in a class method signature for ‘negate’
